--- a/Phase1.ipynb
+++ b/Phase1.ipynb
@@ -1,12 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23bd1718-f67c-44de-9e26-7e8fa3654c34",
+   "cell_type": "markdown",
+   "id": "98c3c584",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Data Colllection"
+   ]
   }
  ],
  "metadata": {
