--- a/Phase1.ipynb
+++ b/Phase1.ipynb
@@ -7,6 +7,30 @@
    "source": [
     "# Data Colllection"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfd8957e",
+   "metadata": {},
+   "source": [
+    "#### The EM-DAT Public Table is a global disaster database maintained by CRED, tracking natural and technological disasters. It includes data on fatalities, affected populations, and economic damages, and is used for research and disaster management."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07155553",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df1 = pd.read_excel(/Datasets/emdat.xlsx)\n",
+    "print(df1.head())"
+   ]
   }
  ],
  "metadata": {
