--- a/Phase1.ipynb
+++ b/Phase1.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "95ac449a",
+   "metadata": {},
+   "source": [
+    "## EM-DAT: The International Disaster Database"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cfd8957e",
    "metadata": {},
    "source": [
@@ -18,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "f20b4f6a",
    "metadata": {},
    "outputs": [
@@ -26,14 +34,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting openpyxl\n",
-      "  Downloading openpyxl-3.1.5-py2.py3-none-any.whl.metadata (2.5 kB)\n",
-      "Collecting et-xmlfile (from openpyxl)\n",
-      "  Downloading et_xmlfile-2.0.0-py3-none-any.whl.metadata (2.7 kB)\n",
-      "Downloading openpyxl-3.1.5-py2.py3-none-any.whl (250 kB)\n",
-      "Downloading et_xmlfile-2.0.0-py3-none-any.whl (18 kB)\n",
-      "Installing collected packages: et-xmlfile, openpyxl\n",
-      "Successfully installed et-xmlfile-2.0.0 openpyxl-3.1.5\n",
+      "Requirement already satisfied: openpyxl in /usr/local/python/3.12.1/lib/python3.12/site-packages (3.1.5)\n",
+      "Requirement already satisfied: et-xmlfile in /usr/local/python/3.12.1/lib/python3.12/site-packages (from openpyxl) (2.0.0)\n",
       "\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3 -m pip install --upgrade pip\u001b[0m\n"
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "6134a5e6",
    "metadata": {},
    "outputs": [
@@ -105,6 +107,76 @@
     "\n",
     "df1 = pd.read_excel(\"Datasets/emdat.xlsx\")\n",
     "print(df1.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a74994bc",
+   "metadata": {},
+   "source": [
+    "## Kaggle Dataset : ALL NATURAL DISASTERS 1900-2021 / EOSDIS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26dfdc1a",
+   "metadata": {},
+   "source": [
+    "#### This dataset, hosted on Kaggle, provides a record of natural disasters worldwide from 1900 to 2021, sourced from NASA's Earth Observing System Data and Information System (EOSDIS). It includes details such as disaster type, location, dates, and impacts (e.g., fatalities, affected populations, and economic damages), making it useful for analyzing historical disaster trends and impacts."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bd0309ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Year   Seq Glide Disaster Group Disaster Subgroup      Disaster Type  \\\n",
+      "0  1900  9002   NaN        Natural    Climatological            Drought   \n",
+      "1  1900  9001   NaN        Natural    Climatological            Drought   \n",
+      "2  1902    12   NaN        Natural       Geophysical         Earthquake   \n",
+      "3  1902     3   NaN        Natural       Geophysical  Volcanic activity   \n",
+      "4  1902    10   NaN        Natural       Geophysical  Volcanic activity   \n",
+      "\n",
+      "  Disaster Subtype Disaster Subsubtype   Event Name     Country  ...  \\\n",
+      "0          Drought                 NaN          NaN  Cabo Verde  ...   \n",
+      "1          Drought                 NaN          NaN       India  ...   \n",
+      "2  Ground movement                 NaN          NaN   Guatemala  ...   \n",
+      "3         Ash fall                 NaN  Santa Maria   Guatemala  ...   \n",
+      "4         Ash fall                 NaN  Santa Maria   Guatemala  ...   \n",
+      "\n",
+      "  No Affected No Homeless Total Affected Insured Damages ('000 US$)  \\\n",
+      "0         NaN         NaN            NaN                        NaN   \n",
+      "1         NaN         NaN            NaN                        NaN   \n",
+      "2         NaN         NaN            NaN                        NaN   \n",
+      "3         NaN         NaN            NaN                        NaN   \n",
+      "4         NaN         NaN            NaN                        NaN   \n",
+      "\n",
+      "  Total Damages ('000 US$)       CPI Adm Level Admin1 Code Admin2 Code  \\\n",
+      "0                      NaN  3.221647       NaN         NaN         NaN   \n",
+      "1                      NaN  3.221647       NaN         NaN         NaN   \n",
+      "2                  25000.0  3.350513       NaN         NaN         NaN   \n",
+      "3                      NaN  3.350513       NaN         NaN         NaN   \n",
+      "4                      NaN  3.350513       NaN         NaN         NaN   \n",
+      "\n",
+      "  Geo Locations  \n",
+      "0           NaN  \n",
+      "1           NaN  \n",
+      "2           NaN  \n",
+      "3           NaN  \n",
+      "4           NaN  \n",
+      "\n",
+      "[5 rows x 45 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2 = pd.read_csv(\"Datasets/EOSDIS.csv\")\n",
+    "print(df2.head())"
    ]
   }
  ],
