--- a/Phase1.ipynb
+++ b/Phase1.ipynb
@@ -178,6 +178,14 @@
     "df2 = pd.read_csv(\"Datasets/EOSDIS.csv\")\n",
     "print(df2.head())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69d32f40",
+   "metadata": {},
+   "source": [
+    "nnnn"
+   ]
   }
  ],
  "metadata": {
