--- a/Phase1.ipynb
+++ b/Phase1.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "f20b4f6a",
    "metadata": {},
    "outputs": [
@@ -34,8 +34,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: openpyxl in /usr/local/python/3.12.1/lib/python3.12/site-packages (3.1.5)\n",
-      "Requirement already satisfied: et-xmlfile in /usr/local/python/3.12.1/lib/python3.12/site-packages (from openpyxl) (2.0.0)\n",
+      "Collecting openpyxl\n",
+      "  Downloading openpyxl-3.1.5-py2.py3-none-any.whl.metadata (2.5 kB)\n",
+      "Collecting et-xmlfile (from openpyxl)\n",
+      "  Downloading et_xmlfile-2.0.0-py3-none-any.whl.metadata (2.7 kB)\n",
+      "Downloading openpyxl-3.1.5-py2.py3-none-any.whl (250 kB)\n",
+      "Downloading et_xmlfile-2.0.0-py3-none-any.whl (18 kB)\n",
+      "Installing collected packages: et-xmlfile, openpyxl\n",
+      "Successfully installed et-xmlfile-2.0.0 openpyxl-3.1.5\n",
       "\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3 -m pip install --upgrade pip\u001b[0m\n"
@@ -48,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "6134a5e6",
    "metadata": {},
    "outputs": [
@@ -127,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "bd0309ba",
    "metadata": {},
    "outputs": [
@@ -177,6 +183,100 @@
    "source": [
     "df2 = pd.read_csv(\"Datasets/EOSDIS.csv\")\n",
     "print(df2.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbbb9d1d",
+   "metadata": {},
+   "source": [
+    "api"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89f8c757",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Event Name                  Country  ISO Disaster Group  Latitude  \\\n",
+      "0                                                      EQ  -19.0936   \n",
+      "1                              Greece  GRC             EQ   36.6542   \n",
+      "2                                                      EQ  -11.4468   \n",
+      "3   VINCE-25  Cocos (Keeling) Islands                  TC  -18.7900   \n",
+      "4  TALIAH-25                                           TC  -14.8000   \n",
+      "\n",
+      "   Longitude Start Year Start Month Start Day End Year End Month End Day  \\\n",
+      "0  -172.6221       2025          02        05     2025        02      05   \n",
+      "1    25.6259       2025          02        05     2025        02      05   \n",
+      "2   117.2370       2025          02        05     2025        02      05   \n",
+      "3    83.9100       2025          02        01     2025        02      05   \n",
+      "4   106.0000       2025          02        02     2025        02      05   \n",
+      "\n",
+      "  Magnitude Losses  \n",
+      "0      None   None  \n",
+      "1      None   None  \n",
+      "2      None   None  \n",
+      "3      None   None  \n",
+      "4      None   None  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import pandas as pd\n",
+    "\n",
+    "# GDACS API URL for latest events\n",
+    "GDACS_URL = \"https://www.gdacs.org/gdacsapi/api/events/geteventlist/EVENTS4APP\"\n",
+    "\n",
+    "def fetch_gdacs_data():\n",
+    "    \"\"\"Fetches disaster event data from GDACS API.\"\"\"\n",
+    "    \n",
+    "    response = requests.get(GDACS_URL)\n",
+    "    if response.status_code != 200:\n",
+    "        raise Exception(\"Failed to fetch data from GDACS API\")\n",
+    "    \n",
+    "    data = response.json()[\"features\"]  # Extract event list\n",
+    "    \n",
+    "    # Extract relevant details\n",
+    "    events = []\n",
+    "    for event in data:\n",
+    "        properties = event[\"properties\"]\n",
+    "        \n",
+    "        # Append event details to list\n",
+    "        events.append({\n",
+    "            \"Event Name\": properties[\"eventname\"],\n",
+    "            \"Country\": properties[\"country\"],\n",
+    "            \"ISO\": properties[\"iso3\"],\n",
+    "            \"Disaster Group\": properties[\"eventtype\"],\n",
+    "            \"Latitude\": event[\"geometry\"][\"coordinates\"][1],  # Lat from GeoJSON\n",
+    "            \"Longitude\": event[\"geometry\"][\"coordinates\"][0],  # Lon from GeoJSON\n",
+    "            \"Start Year\": properties[\"fromdate\"][:4],  # Extract year from date\n",
+    "            \"Start Month\": properties[\"fromdate\"][5:7],  # Extract month\n",
+    "            \"Start Day\": properties[\"fromdate\"][8:10],  # Extract day\n",
+    "            \"End Year\": properties[\"todate\"][:4] if properties[\"todate\"] else None,\n",
+    "            \"End Month\": properties[\"todate\"][5:7] if properties[\"todate\"] else None,\n",
+    "            \"End Day\": properties[\"todate\"][8:10] if properties[\"todate\"] else None,\n",
+    "            \"Magnitude\": properties.get(\"magnitude\"),\n",
+    "            \"Losses\": properties.get(\"economicloss\", None) \n",
+    "        })\n",
+    "    \n",
+    "    return pd.DataFrame(events)\n",
+    "\n",
+    "# Fetch GDACS data\n",
+    "gdacs_df = fetch_gdacs_data()\n",
+    "\n",
+    "# Display the first few rows\n",
+    "print(gdacs_df.head())\n",
+    "\n",
+    "# Save to CSV (optional)\n",
+    "gdacs_df.to_csv(\"gdacs_disaster_data.csv\", index=False)\n",
+    "\n",
+    "\n"
    ]
   }
  ],
