--- a/Phase1.ipynb
+++ b/Phase1.ipynb
@@ -190,7 +190,7 @@
    "id": "cbbb9d1d",
    "metadata": {},
    "source": [
-    "api"
+    "### Global Disaster Alert and Coordination System (GDACS)"
    ]
   },
   {
