--- a/Phase1.ipynb
+++ b/Phase1.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "89f8c757",
    "metadata": {},
    "outputs": [
@@ -203,80 +203,101 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Event Name                  Country  ISO Disaster Group  Latitude  \\\n",
-      "0                                                      EQ  -19.0936   \n",
-      "1                              Greece  GRC             EQ   36.6542   \n",
-      "2                                                      EQ  -11.4468   \n",
-      "3   VINCE-25  Cocos (Keeling) Islands                  TC  -18.7900   \n",
-      "4  TALIAH-25                                           TC  -14.8000   \n",
-      "\n",
-      "   Longitude Start Year Start Month Start Day End Year End Month End Day  \\\n",
-      "0  -172.6221       2025          02        05     2025        02      05   \n",
-      "1    25.6259       2025          02        05     2025        02      05   \n",
-      "2   117.2370       2025          02        05     2025        02      05   \n",
-      "3    83.9100       2025          02        01     2025        02      05   \n",
-      "4   106.0000       2025          02        02     2025        02      05   \n",
-      "\n",
-      "  Magnitude Losses  \n",
-      "0      None   None  \n",
-      "1      None   None  \n",
-      "2      None   None  \n",
-      "3      None   None  \n",
-      "4      None   None  \n"
+      "Data successfully saved to gdacs_disasters.csv\n"
      ]
     }
    ],
    "source": [
     "import requests\n",
-    "import pandas as pd\n",
+    "import csv\n",
     "\n",
-    "# GDACS API URL for latest events\n",
-    "GDACS_URL = \"https://www.gdacs.org/gdacsapi/api/events/geteventlist/EVENTS4APP\"\n",
+    "# API URL\n",
+    "api_url = \"https://www.gdacs.org/gdacsapi/api/events/geteventlist/EVENTS4APP\"\n",
     "\n",
-    "def fetch_gdacs_data():\n",
-    "    \"\"\"Fetches disaster event data from GDACS API.\"\"\"\n",
-    "    \n",
-    "    response = requests.get(GDACS_URL)\n",
-    "    if response.status_code != 200:\n",
-    "        raise Exception(\"Failed to fetch data from GDACS API\")\n",
-    "    \n",
-    "    data = response.json()[\"features\"]  # Extract event list\n",
-    "    \n",
-    "    # Extract relevant details\n",
-    "    events = []\n",
-    "    for event in data:\n",
-    "        properties = event[\"properties\"]\n",
-    "        \n",
-    "        # Append event details to list\n",
-    "        events.append({\n",
-    "            \"Event Name\": properties[\"eventname\"],\n",
-    "            \"Country\": properties[\"country\"],\n",
-    "            \"ISO\": properties[\"iso3\"],\n",
-    "            \"Disaster Group\": properties[\"eventtype\"],\n",
-    "            \"Latitude\": event[\"geometry\"][\"coordinates\"][1],  # Lat from GeoJSON\n",
-    "            \"Longitude\": event[\"geometry\"][\"coordinates\"][0],  # Lon from GeoJSON\n",
-    "            \"Start Year\": properties[\"fromdate\"][:4],  # Extract year from date\n",
-    "            \"Start Month\": properties[\"fromdate\"][5:7],  # Extract month\n",
-    "            \"Start Day\": properties[\"fromdate\"][8:10],  # Extract day\n",
-    "            \"End Year\": properties[\"todate\"][:4] if properties[\"todate\"] else None,\n",
-    "            \"End Month\": properties[\"todate\"][5:7] if properties[\"todate\"] else None,\n",
-    "            \"End Day\": properties[\"todate\"][8:10] if properties[\"todate\"] else None,\n",
-    "            \"Magnitude\": properties.get(\"magnitude\"),\n",
-    "            \"Losses\": properties.get(\"economicloss\", None) \n",
-    "        })\n",
-    "    \n",
-    "    return pd.DataFrame(events)\n",
+    "# API Parameters (Modify dates as needed)\n",
+    "params = {\n",
+    "    \"from\": \"2010-01-01\",  # Modify this\n",
+    "    \"to\": \"2024-02-06\",  # Modify this\n",
+    "    \"source\": \"DFO\",\n",
+    "    \"alertlevel\": \"RED\",\n",
+    "    \"datatype\": \"4DAYS\",\n",
+    "    \"type\": \"json\"\n",
+    "}\n",
     "\n",
-    "# Fetch GDACS data\n",
-    "gdacs_df = fetch_gdacs_data()\n",
+    "# Send API request\n",
+    "response = requests.get(api_url, params=params)\n",
     "\n",
-    "# Display the first few rows\n",
-    "print(gdacs_df.head())\n",
+    "if response.status_code == 200:\n",
+    "    data = response.json()  # Convert response to JSON\n",
+    "    features = data.get(\"features\", [])  # Extract list of disaster events\n",
     "\n",
-    "# Save to CSV (optional)\n",
-    "gdacs_df.to_csv(\"gdacs_disaster_data.csv\", index=False)\n",
+    "    # CSV Output File\n",
+    "    csv_filename = \"gdacs_disasters.csv\"\n",
     "\n",
-    "\n"
+    "    # Define CSV Headers\n",
+    "    headers = [\n",
+    "        \"Event Name\", \"Country\", \"ISO\", \"Disaster Group\", \"Disaster Subgroup\",\n",
+    "        \"Disaster Type\", \"Disaster Subtype\", \"Latitude\", \"Longitude\",\n",
+    "        \"Start Year\", \"Start Month\", \"Start Day\", \"End Year\", \"End Month\", \"End Day\",\n",
+    "        \"Magnitude\", \"Affected People\"\n",
+    "    ]\n",
+    "\n",
+    "    # Write to CSV\n",
+    "    with open(csv_filename, mode=\"w\", newline=\"\", encoding=\"utf-8\") as file:\n",
+    "        writer = csv.writer(file)\n",
+    "        writer.writerow(headers)  # Write header row\n",
+    "\n",
+    "        for feature in features:\n",
+    "            properties = feature.get(\"properties\", {})\n",
+    "            geometry = feature.get(\"geometry\", {})\n",
+    "\n",
+    "            # Extracting required fields\n",
+    "            event_name = properties.get(\"name\", \"Unknown\")\n",
+    "            country = properties.get(\"country\", \"Unknown\")\n",
+    "            iso = properties.get(\"iso3\", \"Unknown\")\n",
+    "            disaster_group = properties.get(\"Class\", \"Unknown\")  # Adjust as needed\n",
+    "            disaster_subgroup = \"Unknown\"  # No direct field found in API\n",
+    "            disaster_type = properties.get(\"eventtype\", \"Unknown\")\n",
+    "            disaster_subtype = \"Unknown\"  # No direct field found in API\n",
+    "\n",
+    "            # Extract latitude & longitude\n",
+    "            latitude, longitude = None, None\n",
+    "            if geometry.get(\"type\") == \"Point\":\n",
+    "                coordinates = geometry.get(\"coordinates\", [])\n",
+    "                if len(coordinates) >= 2:\n",
+    "                    longitude, latitude = coordinates[0], coordinates[1]\n",
+    "\n",
+    "            # Extract start and end dates\n",
+    "            start_date = properties.get(\"fromdate\", \"0000-00-00\").split(\"T\")[0]\n",
+    "            end_date = properties.get(\"todate\", \"0000-00-00\").split(\"T\")[0]\n",
+    "\n",
+    "            start_year, start_month, start_day = start_date.split(\"-\")\n",
+    "            end_year, end_month, end_day = end_date.split(\"-\")\n",
+    "\n",
+    "            # Determine magnitude based on alert level\n",
+    "            alert_level = properties.get(\"alertlevel\", \"Green\")\n",
+    "            if alert_level == \"RED\":\n",
+    "                magnitude = \">4\"\n",
+    "            elif alert_level == \"ORANGE\":\n",
+    "                magnitude = \">2\"\n",
+    "            else:\n",
+    "                magnitude = \"<=2\"\n",
+    "\n",
+    "            # Affected people\n",
+    "            affected_people = properties.get(\"totalaffected\", \"N/A\")\n",
+    "\n",
+    "            # Write row to CSV\n",
+    "            writer.writerow([\n",
+    "                event_name, country, iso, disaster_group, disaster_subgroup,\n",
+    "                disaster_type, disaster_subtype, latitude, longitude,\n",
+    "                start_year, start_month, start_day, end_year, end_month, end_day,\n",
+    "                magnitude, affected_people\n",
+    "            ])\n",
+    "\n",
+    "    print(f\"Data successfully saved to {csv_filename}\")\n",
+    "\n",
+    "else:\n",
+    "    print(f\"Failed to fetch data. Status Code: {response.status_code}\")\n"
    ]
   }
  ],
