--- a/Phase1.ipynb
+++ b/Phase1.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "f20b4f6a",
    "metadata": {},
    "outputs": [
@@ -34,8 +34,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: openpyxl in /usr/local/python/3.12.1/lib/python3.12/site-packages (3.1.5)\n",
-      "Requirement already satisfied: et-xmlfile in /usr/local/python/3.12.1/lib/python3.12/site-packages (from openpyxl) (2.0.0)\n",
+      "Collecting openpyxl\n",
+      "  Downloading openpyxl-3.1.5-py2.py3-none-any.whl.metadata (2.5 kB)\n",
+      "Collecting et-xmlfile (from openpyxl)\n",
+      "  Downloading et_xmlfile-2.0.0-py3-none-any.whl.metadata (2.7 kB)\n",
+      "Downloading openpyxl-3.1.5-py2.py3-none-any.whl (250 kB)\n",
+      "Downloading et_xmlfile-2.0.0-py3-none-any.whl (18 kB)\n",
+      "Installing collected packages: et-xmlfile, openpyxl\n",
+      "Successfully installed et-xmlfile-2.0.0 openpyxl-3.1.5\n",
       "\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3 -m pip install --upgrade pip\u001b[0m\n"
@@ -48,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "6134a5e6",
    "metadata": {},
    "outputs": [
@@ -127,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "bd0309ba",
    "metadata": {},
    "outputs": [
@@ -189,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "89f8c757",
    "metadata": {},
    "outputs": [
@@ -200,7 +206,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 65\u001b[0m\n\u001b[1;32m     61\u001b[0m start_date \u001b[38;5;241m=\u001b[39m properties\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfromdate\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1900-01-01\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mT\u001b[39m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     64\u001b[0m start_year, start_month, start_day \u001b[38;5;241m=\u001b[39m start_date\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 65\u001b[0m end_year, end_month, end_day \u001b[38;5;241m=\u001b[39m \u001b[43mend_date\u001b[49m\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     67\u001b[0m \u001b[38;5;66;03m# Determine magnitude based on alert level\u001b[39;00m\n\u001b[1;32m     68\u001b[0m alert_level \u001b[38;5;241m=\u001b[39m properties\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124malertlevel\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGreen\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;32m/workspaces/IT362-Project/Phase1.ipynb Cell 10\u001b[0m line \u001b[0;36m6\n\u001b[1;32m     <a href='vscode-notebook-cell://codespaces%2Borganic-bassoon-4jw74xwq7pv9cqv5v/workspaces/IT362-Project/Phase1.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=60'>61</a>\u001b[0m start_date \u001b[39m=\u001b[39m properties\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mfromdate\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m1900-01-01\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39mT\u001b[39m\u001b[39m\"\u001b[39m)[\u001b[39m0\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell://codespaces%2Borganic-bassoon-4jw74xwq7pv9cqv5v/workspaces/IT362-Project/Phase1.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=63'>64</a>\u001b[0m start_year, start_month, start_day \u001b[39m=\u001b[39m start_date\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m-\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell://codespaces%2Borganic-bassoon-4jw74xwq7pv9cqv5v/workspaces/IT362-Project/Phase1.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=64'>65</a>\u001b[0m end_year, end_month, end_day \u001b[39m=\u001b[39m end_date\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m-\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell://codespaces%2Borganic-bassoon-4jw74xwq7pv9cqv5v/workspaces/IT362-Project/Phase1.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=66'>67</a>\u001b[0m \u001b[39m# Determine magnitude based on alert level\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://codespaces%2Borganic-bassoon-4jw74xwq7pv9cqv5v/workspaces/IT362-Project/Phase1.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=67'>68</a>\u001b[0m alert_level \u001b[39m=\u001b[39m properties\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39malertlevel\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mGreen\u001b[39m\u001b[39m\"\u001b[39m)\n",
       "\u001b[0;31mNameError\u001b[0m: name 'end_date' is not defined"
      ]
     }
@@ -296,6 +302,51 @@
     "\n",
     "else:\n",
     "    print(f\"Failed to fetch data. Status Code: {response.status_code}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac15cf90",
+   "metadata": {},
+   "source": [
+    "Convert Data Types to Match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "976255a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_columns = [\"Latitude\", \"Longitude\", \"Start Year\", \"Start Month\", \"Start Day\", \n",
+    "                   \"End Year\", \"End Month\", \"End Day\", \"Total Deaths\", \"No. Injured\", \n",
+    "                   \"No. Affected\", \"No. Homeless\", \"Total Affected\", \"Total Damages ('000 US$)\", \"CPI\", \"Magnitude\"]\n",
+    "\n",
+    "for col in numeric_columns:\n",
+    "    if col in df1.columns:\n",
+    "        df1[col] = pd.to_numeric(df1[col], errors='coerce')  # Convert to numeric, set errors to NaN\n",
+    "    if col in df2.columns:\n",
+    "        df2[col] = pd.to_numeric(df2[col], errors='coerce')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6d8b3db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "string_columns = [\"Year\", \"Disaster Group\", \"Disaster Subgroup\", \"Disaster Type\", \"ISO\", \"Magnitude Scale\"]\n",
+    "\n",
+    "for col in string_columns:\n",
+    "    if col in df1.columns:\n",
+    "        df1[col] = df1[col].astype(str).str.strip()  # Ensure string format\n",
+    "    if col in df2.columns:\n",
+    "        df2[col] = df2[col].astype(str).str.strip()\n",
+    "\n",
+    "print(\"Updated df1 column types:\\n\", df1.dtypes)\n",
+    "print(\"Updated df2 column types:\\n\", df2.dtypes)"
    ]
   },
   {
