--- a/Phase1.ipynb
+++ b/Phase1.ipynb
@@ -5,7 +5,7 @@
    "id": "98c3c584",
    "metadata": {},
    "source": [
-    "# Data Colllection"
+    "# IT362: Principles of Data Science"
    ]
   },
   {
@@ -13,43 +13,58 @@
    "id": "95ac449a",
    "metadata": {},
    "source": [
-    "## EM-DAT: The International Disaster Database"
+    "## Phase 1: Data Collection Research and Assessment  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cfd8957e",
+   "id": "bca1870d",
    "metadata": {},
    "source": [
-    "#### The EM-DAT Public Table is a global disaster database maintained by CRED, tracking natural and technological disasters. It includes data on fatalities, affected populations, and economic damages, and is used for research and disaster management."
+    "### 1. Introduction\n",
+    "The **Natural Disaster Prediction Model: PREDINA** aims to analyze and predict the impacts of natural disasters based on historical data, with a focus on enhancing disaster preparedness and response strategies. The main research question guiding this project is: *How can historical data on natural disasters inform future predictions and improve community resilience?*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6ee887f",
+   "metadata": {},
+   "source": [
+    "### 2. Importing Libraries\n",
+    "In this section, we will import the necessary libraries for our analysis and data processing."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "f20b4f6a",
+   "execution_count": null,
+   "id": "42176333",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting openpyxl\n",
-      "  Downloading openpyxl-3.1.5-py2.py3-none-any.whl.metadata (2.5 kB)\n",
-      "Collecting et-xmlfile (from openpyxl)\n",
-      "  Downloading et_xmlfile-2.0.0-py3-none-any.whl.metadata (2.7 kB)\n",
-      "Downloading openpyxl-3.1.5-py2.py3-none-any.whl (250 kB)\n",
-      "Downloading et_xmlfile-2.0.0-py3-none-any.whl (18 kB)\n",
-      "Installing collected packages: et-xmlfile, openpyxl\n",
-      "Successfully installed et-xmlfile-2.0.0 openpyxl-3.1.5\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3 -m pip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install openpyxl"
+    "# Install required libraries\n",
+    "!pip install openpyxl\n",
+    "\n",
+    "# Import libraries\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af8f01a4",
+   "metadata": {},
+   "source": [
+    "### 3. Datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28710ab0",
+   "metadata": {},
+   "source": [
+    "- #### **EM-DAT: The International Disaster Database**\n",
+    "The EM-DAT Public Table is a global disaster database maintained by CRED, tracking natural and technological disasters. It includes data on fatalities, affected populations, and economic damages, and is used for research and disaster management."
    ]
   },
   {
@@ -109,8 +124,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "df1 = pd.read_excel(\"Datasets/emdat.xlsx\")\n",
     "print(df1.head())"
    ]
@@ -120,15 +133,8 @@
    "id": "a74994bc",
    "metadata": {},
    "source": [
-    "## Kaggle Dataset : ALL NATURAL DISASTERS 1900-2021 / EOSDIS"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "26dfdc1a",
-   "metadata": {},
-   "source": [
-    "#### This dataset, hosted on Kaggle, provides a record of natural disasters worldwide from 1900 to 2021, sourced from NASA's Earth Observing System Data and Information System (EOSDIS). It includes details such as disaster type, location, dates, and impacts (e.g., fatalities, affected populations, and economic damages), making it useful for analyzing historical disaster trends and impacts."
+    "- #### **Kaggle Dataset : ALL NATURAL DISASTERS 1900-2021 / EOSDIS**\n",
+    "This dataset, hosted on Kaggle, provides a record of natural disasters worldwide from 1900 to 2021, sourced from NASA's Earth Observing System Data and Information System (EOSDIS). It includes details such as disaster type, location, dates, and impacts (e.g., fatalities, affected populations, and economic damages), making it useful for analyzing historical disaster trends and impacts."
    ]
   },
   {
@@ -190,7 +196,8 @@
    "id": "cbbb9d1d",
    "metadata": {},
    "source": [
-    "## Global Disaster Alert and Coordination System (GDACS)"
+    "- ### **Global Disaster Alert and Coordination System (GDACS)**\n",
+    "The GDACS API provides real-time alerts on natural disasters such as earthquakes, tsunamis, and storms, offering data on disaster type, location, magnitude, and impact. It is useful for monitoring, coordinating disaster response efforts, and supplementing data for building predictive models."
    ]
   },
   {
@@ -212,8 +219,7 @@
     }
    ],
    "source": [
-    "import requests\n",
-    "import csv\n",
+    "\n",
     "\n",
     "# API URL\n",
     "api_url = \"https://www.gdacs.org/gdacsapi/api/events/geteventlist/EVENTS4APP\"\n",
@@ -354,7 +360,7 @@
    "id": "de665b7d",
    "metadata": {},
    "source": [
-    "## Data Intergration"
+    "### 4. Data Intergration"
    ]
   },
   {
