--- a/Phase1.ipynb
+++ b/Phase1.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "42176333",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "6134a5e6",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "bd0309ba",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "89f8c757",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "764bd24c",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "976255a5",
    "metadata": {},
    "outputs": [],
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "d6d8b3db",
    "metadata": {},
    "outputs": [
@@ -484,12 +484,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "95f6bcfd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "emdat_df['Year'] = emdat_df['Year'].astype(str).str[:4]\n",
+    "emdat_df['DisNo.'] = emdat_df['DisNo.'].astype(str).str[:4]\n",
     "\n",
     "emdat_df.rename(columns={'DisNo.': 'Year'}, inplace=True)\n",
     "emdat_df.rename(columns={\"Total Damage, Adjusted ('000 US$)\": \"Total Damages ('000 US$')\"}, inplace=True)\n",
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "859bf58e",
    "metadata": {},
    "outputs": [
@@ -606,6 +606,7 @@
       "Admin2 Code                    object\n",
       "Geo Locations                  object\n",
       "dtype: object\n",
+      "Columns used for merging: ['Year', 'Disaster Group', 'Disaster Subgroup', 'Disaster Type', 'ISO', 'Latitude', 'Longitude', 'Start Year', 'Start Month', 'Start Day', 'End Year', 'End Month', 'End Day', 'Total Deaths', 'No. Injured', 'No. Affected', 'No. Homeless', 'Total Affected', \"Total Damages ('000 US$)\", 'CPI', 'Magnitude', 'Magnitude Scale']\n",
       "Merged data successfully saved!\n"
      ]
     }
@@ -621,18 +622,22 @@
     "if 'DisNo.' in emdat_df.columns:\n",
     "    emdat_df.rename(columns={'DisNo.': 'Year'}, inplace=True)\n",
     "\n",
-    "# Convert 'Year' to int if possible, or keep it as a string\n",
-    "emdat_df['Year'] = emdat_df['Year'].astype(str).str[:4]  # Ensure it's a 4-digit string\n",
-    "kaggle_df['Year'] = kaggle_df['Year'].astype(str)  # Convert to string for matching\n",
+    "# Convert 'Year' to a 4-digit string\n",
+    "emdat_df['Year'] = emdat_df['Year'].astype(str).str[:4]\n",
+    "kaggle_df['Year'] = kaggle_df['Year'].astype(str)\n",
     "\n",
-    "# Rename other columns\n",
+    "# Rename other columns to match across datasets\n",
     "emdat_df.rename(columns={\"Total Damages ('000 US$')\": \"Total Damages ('000 US$)\"}, inplace=True)\n",
-    "kaggle_df.rename(columns={'Dis Mag Value': 'Magnitude', 'Dis Mag Scale': 'Magnitude Scale', \n",
-    "                    'No Injured': 'No. Injured', 'No Affected': 'No. Affected', \n",
-    "                    'No Homeless': 'No. Homeless'}, inplace=True)\n",
+    "kaggle_df.rename(columns={\n",
+    "    'Dis Mag Value': 'Magnitude', \n",
+    "    'Dis Mag Scale': 'Magnitude Scale', \n",
+    "    'No Injured': 'No. Injured', \n",
+    "    'No Affected': 'No. Affected', \n",
+    "    'No Homeless': 'No. Homeless'\n",
+    "}, inplace=True)\n",
     "\n",
-    "# Define merge columns\n",
-    "merge_columns = [\n",
+    "# Define potential merge columns\n",
+    "all_merge_columns = [\n",
     "    \"Year\", \"Disaster Group\", \"Disaster Subgroup\", \"Disaster Type\", \"ISO\",\n",
     "    \"Latitude\", \"Longitude\", \"Start Year\", \"Start Month\", \"Start Day\", \n",
     "    \"End Year\", \"End Month\", \"End Day\", \"Total Deaths\", \"No. Injured\", \n",
@@ -640,24 +645,24 @@
     "    \"CPI\", \"Magnitude\", \"Magnitude Scale\"\n",
     "]\n",
     "\n",
-    "# Check for missing columns\n",
-    "missing_cols_df1 = [col for col in merge_columns if col not in emdat_df.columns]\n",
-    "missing_cols_df2 = [col for col in merge_columns if col not in kaggle_df.columns]\n",
+    "# Dynamically select columns that exist in both DataFrames\n",
+    "existing_merge_columns = [col for col in all_merge_columns if col in emdat_df.columns and col in kaggle_df.columns]\n",
     "\n",
-    "if missing_cols_df1 or missing_cols_df2:\n",
-    "    print(\"Missing columns in df1:\", missing_cols_df1)\n",
-    "    print(\"Missing columns in df2:\", missing_cols_df2)\n",
-    "else:\n",
-    "    # Merge DataFrames\n",
-    "    merged_df = pd.merge(emdat_df, kaggle_df, on=merge_columns, how=\"inner\")\n",
+    "# Print selected merge columns for debugging\n",
+    "print(\"Columns used for merging:\", existing_merge_columns)\n",
     "\n",
-    "    # Drop duplicates and null values\n",
-    "    merged_df = merged_df.dropna().drop_duplicates()\n",
+    "# Merge DataFrames on the selected columns\n",
+    "merged_df = pd.merge(emdat_df, kaggle_df, on=existing_merge_columns, how=\"inner\")\n",
     "\n",
-    "    # Save the merged data\n",
-    "    merged_df.to_csv('Datasets/integrated_data.csv', index=False)\n",
-    "    print(\"Merged data successfully saved!\")\n",
-    "\n"
+    "# Keep only the common columns\n",
+    "merged_df = merged_df[existing_merge_columns]\n",
+    "\n",
+    "# Drop duplicates and null values\n",
+    "merged_df = merged_df.dropna().drop_duplicates()\n",
+    "\n",
+    "# Save the merged data\n",
+    "merged_df.to_csv('Datasets/integrated_data.csv', index=False)\n",
+    "print(\"Merged data successfully saved!\")\n"
    ]
   }
  ],
