--- a/Phase1.ipynb
+++ b/Phase1.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 75,
    "id": "42176333",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 76,
    "id": "6134a5e6",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 77,
    "id": "bd0309ba",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 78,
    "id": "89f8c757",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 79,
    "id": "764bd24c",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 80,
    "id": "976255a5",
    "metadata": {},
    "outputs": [],
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 81,
    "id": "d6d8b3db",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 82,
    "id": "95f6bcfd",
    "metadata": {},
    "outputs": [],
@@ -492,18 +492,18 @@
     "emdat_df['DisNo.'] = emdat_df['DisNo.'].astype(str).str[:4]\n",
     "\n",
     "emdat_df.rename(columns={'DisNo.': 'Year'}, inplace=True)\n",
-    "emdat_df.rename(columns={\"Total Damage, Adjusted ('000 US$)\": \"Total Damages ('000 US$')\"}, inplace=True)\n",
+    "emdat_df.rename(columns={\"Total Damage, Adjusted ('000 US$)\": \"Total Damages ('000 US$)\"}, inplace=True)\n",
     "\n",
     "kaggle_df.rename(columns={'Dis Mag Value': 'Magnitude'}, inplace=True)\n",
     "kaggle_df.rename(columns={'Dis Mag Scale': 'Magnitude Scale'}, inplace=True)\n",
     "kaggle_df.rename(columns={'No Injured': 'No. Injured'}, inplace=True)\n",
-    "kaggle_df.rename(columns={'No Affected': 'No Affected'}, inplace=True)\n",
+    "kaggle_df.rename(columns={'No Affected': 'No. Affected'}, inplace=True)\n",
     "kaggle_df.rename(columns={'No Homeless': 'No. Homeless'}, inplace=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 83,
    "id": "859bf58e",
    "metadata": {},
    "outputs": [
@@ -511,158 +511,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "df1 columns and types:\n",
-      " Year                                          object\n",
-      "Historic                                      object\n",
-      "Classification Key                            object\n",
-      "Disaster Group                                object\n",
-      "Disaster Subgroup                             object\n",
-      "Disaster Type                                 object\n",
-      "Disaster Subtype                              object\n",
-      "External IDs                                  object\n",
-      "Event Name                                    object\n",
-      "ISO                                           object\n",
-      "Country                                       object\n",
-      "Subregion                                     object\n",
-      "Region                                        object\n",
-      "Location                                      object\n",
-      "Origin                                        object\n",
-      "Associated Types                              object\n",
-      "OFDA/BHA Response                             object\n",
-      "Appeal                                        object\n",
-      "Declaration                                   object\n",
-      "AID Contribution ('000 US$)                  float64\n",
-      "Magnitude                                    float64\n",
-      "Magnitude Scale                               object\n",
-      "Latitude                                     float64\n",
-      "Longitude                                    float64\n",
-      "River Basin                                   object\n",
-      "Start Year                                     int64\n",
-      "Start Month                                  float64\n",
-      "Start Day                                    float64\n",
-      "End Year                                       int64\n",
-      "End Month                                    float64\n",
-      "End Day                                      float64\n",
-      "Total Deaths                                 float64\n",
-      "No. Injured                                  float64\n",
-      "No. Affected                                 float64\n",
-      "No. Homeless                                 float64\n",
-      "Total Affected                               float64\n",
-      "Reconstruction Costs ('000 US$)              float64\n",
-      "Reconstruction Costs, Adjusted ('000 US$)    float64\n",
-      "Insured Damage ('000 US$)                    float64\n",
-      "Insured Damage, Adjusted ('000 US$)          float64\n",
-      "Total Damage ('000 US$)                      float64\n",
-      "Total Damages ('000 US$)                     float64\n",
-      "CPI                                          float64\n",
-      "Admin Units                                   object\n",
-      "Entry Date                                    object\n",
-      "Last Update                                   object\n",
-      "dtype: object\n",
-      "df2 columns and types:\n",
-      " Year                           object\n",
-      "Seq                             int64\n",
-      "Glide                          object\n",
-      "Disaster Group                 object\n",
-      "Disaster Subgroup              object\n",
-      "Disaster Type                  object\n",
-      "Disaster Subtype               object\n",
-      "Disaster Subsubtype            object\n",
-      "Event Name                     object\n",
-      "Country                        object\n",
-      "ISO                            object\n",
-      "Region                         object\n",
-      "Continent                      object\n",
-      "Location                       object\n",
-      "Origin                         object\n",
-      "Associated Dis                 object\n",
-      "Associated Dis2                object\n",
-      "OFDA Response                  object\n",
-      "Appeal                         object\n",
-      "Declaration                    object\n",
-      "Aid Contribution              float64\n",
-      "Magnitude                     float64\n",
-      "Magnitude Scale                object\n",
-      "Latitude                      float64\n",
-      "Longitude                     float64\n",
-      "Local Time                     object\n",
-      "River Basin                    object\n",
-      "Start Year                      int64\n",
-      "Start Month                   float64\n",
-      "Start Day                     float64\n",
-      "End Year                        int64\n",
-      "End Month                     float64\n",
-      "End Day                       float64\n",
-      "Total Deaths                  float64\n",
-      "No. Injured                   float64\n",
-      "No. Affected                  float64\n",
-      "No. Homeless                  float64\n",
-      "Total Affected                float64\n",
-      "Insured Damages ('000 US$)    float64\n",
-      "Total Damages ('000 US$)      float64\n",
-      "CPI                           float64\n",
-      "Adm Level                      object\n",
-      "Admin1 Code                    object\n",
-      "Admin2 Code                    object\n",
-      "Geo Locations                  object\n",
-      "dtype: object\n",
-      "Columns used for merging: ['Year', 'Disaster Group', 'Disaster Subgroup', 'Disaster Type', 'ISO', 'Latitude', 'Longitude', 'Start Year', 'Start Month', 'Start Day', 'End Year', 'End Month', 'End Day', 'Total Deaths', 'No. Injured', 'No. Affected', 'No. Homeless', 'Total Affected', \"Total Damages ('000 US$)\", 'CPI', 'Magnitude', 'Magnitude Scale']\n",
-      "Merged data successfully saved!\n"
+      "       Year Disaster Group Disaster Subgroup Disaster Type  ISO  Latitude  \\\n",
+      "0      1999        Natural    Climatological       Drought  DJI       NaN   \n",
+      "1      1999        Natural    Climatological       Drought  SDN       NaN   \n",
+      "2      1999        Natural    Climatological       Drought  SOM       NaN   \n",
+      "3      2000  Technological         Transport          Road  AGO       NaN   \n",
+      "4      2000        Natural      Hydrological         Flood  AGO       NaN   \n",
+      "...     ...            ...               ...           ...  ...       ...   \n",
+      "32225  2021        Natural      Hydrological         Flood  YEM       NaN   \n",
+      "32226  2021        Natural      Hydrological         Flood  ZAF       NaN   \n",
+      "32227  2021        Natural        Biological      Epidemic  COD       NaN   \n",
+      "32228  2021        Natural      Hydrological         Flood  SRB       NaN   \n",
+      "32229  2021        Natural      Hydrological         Flood  SSD       NaN   \n",
+      "\n",
+      "       Longitude  Start Year  Start Month  Start Day  ...  End Day  \\\n",
+      "0            NaN        2001          6.0        NaN  ...      NaN   \n",
+      "1            NaN        2000          1.0        NaN  ...      NaN   \n",
+      "2            NaN        2000          1.0        NaN  ...      NaN   \n",
+      "3            NaN        2000          1.0       26.0  ...     26.0   \n",
+      "4            NaN        2000          1.0        8.0  ...     15.0   \n",
+      "...          ...         ...          ...        ...  ...      ...   \n",
+      "32225        NaN        2021          7.0       16.0  ...      7.0   \n",
+      "32226        NaN        2021          2.0        1.0  ...     15.0   \n",
+      "32227        NaN        2021          9.0        7.0  ...     13.0   \n",
+      "32228        NaN        2021          1.0       11.0  ...     12.0   \n",
+      "32229        NaN        2021          5.0        NaN  ...      7.0   \n",
+      "\n",
+      "       Total Deaths  No. Injured  No. Affected  No. Homeless  Total Affected  \\\n",
+      "0               NaN          NaN      100000.0           NaN        100000.0   \n",
+      "1               NaN          NaN     2000000.0           NaN       2000000.0   \n",
+      "2              21.0          NaN     1200000.0           NaN       1200000.0   \n",
+      "3              14.0         11.0           NaN           NaN            11.0   \n",
+      "4              31.0          NaN       70000.0           NaN         70000.0   \n",
+      "...             ...          ...           ...           ...             ...   \n",
+      "32225          11.0          NaN       67980.0           NaN         67980.0   \n",
+      "32226          31.0          NaN         400.0           NaN           400.0   \n",
+      "32227         131.0        301.0           NaN           NaN           301.0   \n",
+      "32228           NaN          NaN          22.0           NaN            22.0   \n",
+      "32229           7.0          NaN      500000.0           NaN        500000.0   \n",
+      "\n",
+      "       Total Damages ('000 US$)        CPI  Magnitude  Magnitude Scale  \n",
+      "0                           NaN  58.111474        NaN              Km2  \n",
+      "1                           NaN  56.514291        NaN              Km2  \n",
+      "2                           NaN  56.514291        NaN              Km2  \n",
+      "3                           NaN  56.514291        NaN              nan  \n",
+      "4                       17695.0  56.514291    47000.0              Km2  \n",
+      "...                         ...        ...        ...              ...  \n",
+      "32225                       NaN        NaN        NaN              Km2  \n",
+      "32226                   75000.0        NaN        NaN              Km2  \n",
+      "32227                       NaN        NaN        NaN       Vaccinated  \n",
+      "32228                       NaN        NaN        NaN              Km2  \n",
+      "32229                       NaN        NaN        NaN              Km2  \n",
+      "\n",
+      "[32230 rows x 22 columns]\n",
+      "Rows after combining: 32230\n",
+      "Combined data successfully saved!\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Print column names and types to debug\n",
-    "print(\"df1 columns and types:\\n\", emdat_df.dtypes)\n",
-    "print(\"df2 columns and types:\\n\", kaggle_df.dtypes)\n",
-    "\n",
-    "# Rename 'DisNo.' to 'Year' in df1 if it exists\n",
-    "if 'DisNo.' in emdat_df.columns:\n",
-    "    emdat_df.rename(columns={'DisNo.': 'Year'}, inplace=True)\n",
-    "\n",
-    "# Convert 'Year' to a 4-digit string\n",
-    "emdat_df['Year'] = emdat_df['Year'].astype(str).str[:4]\n",
-    "kaggle_df['Year'] = kaggle_df['Year'].astype(str)\n",
-    "\n",
-    "# Rename other columns to match across datasets\n",
-    "emdat_df.rename(columns={\"Total Damages ('000 US$')\": \"Total Damages ('000 US$)\"}, inplace=True)\n",
-    "kaggle_df.rename(columns={\n",
-    "    'Dis Mag Value': 'Magnitude', \n",
-    "    'Dis Mag Scale': 'Magnitude Scale', \n",
-    "    'No Injured': 'No. Injured', \n",
-    "    'No Affected': 'No. Affected', \n",
-    "    'No Homeless': 'No. Homeless'\n",
-    "}, inplace=True)\n",
-    "\n",
-    "# Define potential merge columns\n",
-    "all_merge_columns = [\n",
-    "    \"Year\", \"Disaster Group\", \"Disaster Subgroup\", \"Disaster Type\", \"ISO\",\n",
+    "# Example: Columns from df1\n",
+    "df1_columns = [\n",
+    "    \"Year\", \"Disaster Group\", \"Disaster Subgroup\", \"Disaster Type\", \"ISO\", \n",
     "    \"Latitude\", \"Longitude\", \"Start Year\", \"Start Month\", \"Start Day\", \n",
     "    \"End Year\", \"End Month\", \"End Day\", \"Total Deaths\", \"No. Injured\", \n",
     "    \"No. Affected\", \"No. Homeless\", \"Total Affected\", \"Total Damages ('000 US$)\", \n",
     "    \"CPI\", \"Magnitude\", \"Magnitude Scale\"\n",
     "]\n",
     "\n",
-    "# Dynamically select columns that exist in both DataFrames\n",
-    "existing_merge_columns = [col for col in all_merge_columns if col in emdat_df.columns and col in kaggle_df.columns]\n",
+    "# Example: Columns from df2\n",
+    "df2_columns = [\n",
+    "    \"Year\", \"Disaster Group\", \"Disaster Subgroup\", \"Disaster Type\", \"ISO\", \n",
+    "    \"Latitude\", \"Longitude\", \"Start Year\", \"Start Month\", \"Start Day\", \n",
+    "    \"End Year\", \"End Month\", \"End Day\", \"Total Deaths\", \"No. Injured\", \n",
+    "    \"No. Affected\", \"No. Homeless\", \"Total Affected\", \"Total Damages ('000 US$)\", \n",
+    "    \"CPI\", \"Magnitude\", \"Magnitude Scale\"\n",
+    "]\n",
     "\n",
-    "# Print selected merge columns for debugging\n",
-    "print(\"Columns used for merging:\", existing_merge_columns)\n",
+    "# Select only the specified columns from both dataframes\n",
+    "df1_selected = emdat_df[df1_columns]\n",
+    "df2_selected = kaggle_df[df2_columns]\n",
     "\n",
-    "# Merge DataFrames on the selected columns\n",
-    "merged_df = pd.merge(emdat_df, kaggle_df, on=existing_merge_columns, how=\"inner\")\n",
+    "# Concatenate the two DataFrames vertically (adding rows)\n",
+    "integrated_df = pd.concat([df1_selected, df2_selected], axis=0, ignore_index=True)\n",
     "\n",
-    "# Keep only the common columns\n",
-    "merged_df = merged_df[existing_merge_columns]\n",
+    "# Optionally, reset the index if you want a clean index after concatenation\n",
+    "integrated_df.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "# Drop duplicates and null values\n",
-    "merged_df = merged_df.dropna().drop_duplicates()\n",
+    "# Display the resulting DataFrame\n",
+    "print(integrated_df)\n",
     "\n",
-    "# Save the merged data\n",
-    "merged_df.to_csv('Datasets/integrated_data.csv', index=False)\n",
-    "print(\"Merged data successfully saved!\")\n"
+    "# Print number of rows after combining\n",
+    "print(f\"Rows after combining: {len(integrated_df)}\")\n",
+    "\n",
+    "# If the combined data isn't empty, save it\n",
+    "if not integrated_df.empty:\n",
+    "    integrated_df.to_csv('Datasets/integrated_data.csv', index=False)\n",
+    "    print(\"Combined data successfully saved!\")\n",
+    "else:\n",
+    "    print(\"Combined dataset is empty!\")\n"
    ]
   }
  ],
