--- a/Phase1.ipynb
+++ b/Phase1.ipynb
@@ -82,8 +82,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "712274ea",
+   "metadata": {},
+   "source": [
+    "In this section, we are converting the Excel file emdat.xlsx into a CSV format for easier data manipulation and analysis."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 64,
    "id": "6134a5e6",
    "metadata": {},
    "outputs": [
@@ -91,30 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Conversion to CSV completed.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Read the Excel file\n",
-    "emdat = pd.read_excel(\"RawData/emdat.xlsx\")\n",
-    "\n",
-    "# Save the DataFrame to a CSV file\n",
-    "emdat.to_csv(\"Datasets/emdat.csv\", index=False)\n",
-    "\n",
-    "print(\"Conversion to CSV completed.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "2b8d404e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Conversion to CSV completed.\n",
       "          DisNo. Historic Classification Key Disaster Group Disaster Subgroup  \\\n",
       "0  1999-9388-DJI       No    nat-cli-dro-dro        Natural    Climatological   \n",
       "1  1999-9388-SDN       No    nat-cli-dro-dro        Natural    Climatological   \n",
@@ -162,8 +147,24 @@
     }
    ],
    "source": [
+    "# Read the Excel file\n",
+    "emdat = pd.read_excel(\"RawData/emdat.xlsx\")\n",
+    "\n",
+    "# Save the DataFrame to a CSV file\n",
+    "emdat.to_csv(\"Datasets/emdat.csv\", index=False)\n",
+    "\n",
+    "print(\"Conversion to CSV completed.\")\n",
+    "\n",
     "emdat_df = pd.read_csv(\"Datasets/emdat.csv\")\n",
     "print(emdat_df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4423477e",
+   "metadata": {},
+   "source": [
+    "Based on the above output, we have successfully converted the Excel file into a CSV format. The resulting CSV file will contain all the data from the Excel sheet."
    ]
   },
   {
@@ -173,6 +174,14 @@
    "source": [
     "- #### **Kaggle Dataset : ALL NATURAL DISASTERS 1900-2021 / EOSDIS**\n",
     "This dataset, hosted on Kaggle, provides a record of natural disasters worldwide from 1900 to 2021, sourced from NASA's Earth Observing System Data and Information System (EOSDIS). It includes details such as disaster type, location, dates, and impacts (e.g., fatalities, affected populations, and economic damages), making it useful for analyzing historical disaster trends and impacts."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa72a37c",
+   "metadata": {},
+   "source": [
+    "Here we read the dataset's csv file and then displayed the first few rows of the dataframe to get an overview of the data structure and contents."
    ]
   },
   {
@@ -231,14 +240,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c4978ac",
-   "metadata": {},
-   "source": [
-    "Here we read a CSV file named EOSDIS.csv located in the Datasets directory using the pandas library. We then display the first few rows of the dataframe to get an overview of the data structure and contents."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "cbbb9d1d",
    "metadata": {},
    "source": [
@@ -281,6 +282,14 @@
     "# Example usage\n",
     "if __name__ == \"__main__\":\n",
     "    save_raw_dataset()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73476315",
+   "metadata": {},
+   "source": [
+    "In this section, we are implementing a function to fetch the latest event data from the GDACS API. The function sends a GET request to the specified URL and retrieves the raw JSON data. This data is then saved to a file named `gdacs_dataset.json` (located in the `RawData` directory). This process allows us to collect and preserve the most recent disaster event information for further analysis.\n"
    ]
   },
   {
@@ -353,6 +362,14 @@
     "    data = load_and_extract_columns()\n",
     "    print(data)  # Print the extracted data\n",
     "    save_to_csv(data)  # Save the extracted data as a CSV file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e50a571",
+   "metadata": {},
+   "source": [
+    "In this section, we implemented a process to load disaster event data from a JSON file and extract key information for analysis. A function was created to read `gdacs_dataset.json`, retrieving details such as event name, country, ISO code, geographical coordinates, dates, magnitude, and economic losses. Additionally, we developed another function to save this extracted information into a CSV file named `gdacs_disasters.csv`, organizing the data in a clear and accessible format for future analysis."
    ]
   },
   {
@@ -445,10 +462,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "67647aaa",
+   "metadata": {},
+   "source": [
+    "In this section, we focused on processing and modifying the disaster event dataset loaded from a CSV file. First, we renamed the column \"Disaster Group\" to \"disaster type\" and mapped its values to more descriptive categories such as \"Storm,\" \"Earthquake,\" and others. Next, we added several new columns to the DataFrame with NaN values, capturing additional information like total deaths and damages.\n",
+    "\n",
+    "We then introduced a new column called \"Dis. Group,\" setting all its values to \"Natural.\" Additionally, we mapped disaster subgroups based on the newly defined disaster types, categorizing them into groups such as \"Meteorological\" and \"Geophysical.\" Finally, we saved the modified DataFrame to a new CSV file named `modified_gdacs_disasters.csv` for future use and displayed the first few rows of the updated dataset to verify the changes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ac15cf90",
    "metadata": {},
    "source": [
-    "Convert Data Types to Match"
+    "#### Convert Data Types to Match"
    ]
   },
   {
@@ -467,6 +494,16 @@
     "        emdat_df[col] = pd.to_numeric(emdat_df[col], errors='coerce')  # Convert to numeric, set errors to NaN\n",
     "    if col in kaggle_df.columns:\n",
     "        kaggle_df[col] = pd.to_numeric(kaggle_df[col], errors='coerce')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05cecefb",
+   "metadata": {},
+   "source": [
+    "In this section, we focused on converting specific columns in the disaster datasets to numeric types to facilitate analysis. We defined a list of columns, including \"Latitude,\" \"Longitude,\" and various impact metrics like \"Total Deaths\" and \"Total Damages ('000 US$).\" \n",
+    "\n",
+    "We then iterated through this list, checking if each column exists in either the `emdat_df` or `kaggle_df` DataFrames. For those that do, we used `pd.to_numeric()` with the `errors='coerce'` parameter to convert the values to numeric types, automatically setting any conversion errors to NaN. This ensures that our data is clean and ready for further analysis."
    ]
   },
   {
@@ -588,6 +625,16 @@
     "\n",
     "print(\"Updated df1 column types:\\n\", emdat_df.dtypes)\n",
     "print(\"Updated df2 column types:\\n\",kaggle_df.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d6e5e54",
+   "metadata": {},
+   "source": [
+    "In this section, we aimed to ensure that specific columns in the disaster datasets were properly formatted as strings. We defined a list of columns, including \"Year,\" \"Disaster Group,\" and \"Disaster Type.\"\n",
+    "\n",
+    "We then iterated through this list, checking if each column exists in either the `emdat_df` or `kaggle_df` DataFrames. For those present, we converted the columns to string format and removed any leading or trailing whitespace using. Finally, we printed the updated column types for both DataFrames to verify the changes."
    ]
   },
   {
@@ -755,6 +802,18 @@
     "\n",
     "# Print final shape of the merged DataFrame\n",
     "print(\"Merged DataFrame shape:\", merged_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5d3aeb6",
+   "metadata": {},
+   "source": [
+    "In this section, we loaded three disaster datasets and standardized their column names for consistency. We printed the initial columns of each DataFrame to debug before creating mappings for renaming. After renaming the columns, we filtered each DataFrame to keep only the relevant columns, ensuring they matched across the datasets.\n",
+    "\n",
+    "We checked for the existence of the \"Total Damages ('000 US$)\" column in the `emdat_df` and adjusted the columns to keep accordingly. We then reset the indices to ensure uniqueness and checked for duplicate rows, removing any duplicates found.\n",
+    "\n",
+    "Finally, we concatenated the three DataFrames into a single dataset and saved it as `integrated.csv`, printing the final shape of the merged DataFrame to confirm the operation's success."
    ]
   }
  ],
